Fix scrollbar , high res images , newline on text

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body{
   padding : 0px;
   height : 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .imageLogo{
@@ -77,7 +78,8 @@ body{
 }
 
 .logo {
-  margin: 0 auto;
+  margin: 20%;
+  /*margin: 100px auto;*/
   /*position: absolute;/*/
 }
 .video{
@@ -98,13 +100,14 @@ body{
 }
 .media{
   padding : 10px;
-  margin-top : 10px;
+  /*margin-top : 10px;*/
   margin-bottom: 10px;
   background-color:rgba(61, 53, 54, 0.8);
-  border-radius: 5px;
-  -webkit-box-shadow: 3px 3px 3px #000;
-  -moz-box-shadow: 3px 3px 3px #000;
-  box-shadow: 3px 3px 3px #000;
+  /*border-radius: 5px;*/
+  /*-webkit-box-shadow: 3px 3px 3px #000;
+  -moz-box-shadow: 3px 3px 3px #000;*/
+  /*box-shadow: 3px 3px 3px #000;*/
+  box-shadow: 0px 1px 4px rgba(20,17, 17, 0.6);
 }
 
 .media-object{
@@ -112,4 +115,8 @@ body{
   margin-left : 5px;
   margin-right: 5px;
   margin-bottom: 5px;
+}
+
+.text{
+  white-space: pre-line;
 }
